updated manager api
